# reimagined-fishstick-app

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: chart-oci-ecr.yaml  ci.yaml  docker-publish-ecr.yaml  docker-publish-latest.yaml  docker-publish-release.yaml  helm-lint.yaml  release-please.yaml
app/: CHANGELOG.md  main.py  pyproject.toml  version.py
app/src/: main.py  version.py
app/src/demo_app/: __init__.py  main.py  version.py
charts/demo-app/: .helmignore  CHANGELOG.md  Chart.yaml  values.yaml
charts/demo-app/charts/demo-app/: CHANGELOG.md
charts/demo-app/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml
charts/demo-app/templates/tests/: test-connection.yaml
temp/: chart-oci-ecr.yaml  docker-publish-ecr.yaml
tests/: test_api.py
