[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-app"
version = "0.2.0"
description = "Demo REST API returning a static message and current timestamp"
readme = "README.md"
authors = [{ name = "Norman Blakely", email = "nblakely@localnorm.com" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["../tests"]
addopts = "-vv -ra --maxfail=1 --durations=10 --color=yes --log-cli-level=INFO -o log_cli=true"

[tool.setuptools]
py-modules = ["main", "version"]

[tool.setuptools.package-dir]
"" = "src"
