[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-app"
version = "1.0.2"
description = "Demo REST API returning a static message and current timestamp"
readme = "README.md"
authors = [{ name = "Norman Blakely", email = "nblakely@localnorm.com" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# (Optional) If you want pytest options here, keep them,
# but remember CI must run with `-c app/pyproject.toml` to load them
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv -ra --maxfail=1 --durations=10 --color=yes --log-cli-level=INFO -o log_cli=true"
